# temp_ai_asist

./: CODE_OF_CONDUCT.md  README.md
.dev_container/: create_dev_env.sh  devcontainer.json
.dev_container/backend-dev/: make_container.json
.dev_container/frontend-dev/: make_front_container.json
.github/workflows/: test-api-contract.yaml  test-e2e.yaml
app_messages_produser/: pyproject.toml
copilot/api/: manifest.yml
copilot/environments/staging/: manifest.yml
copilot/web/: manifest.yml
deploy/node_dev_env/: get_cert.sh  nginx.conf
deploy/node_stage_env/: get_cert.sh  nginx.conf
docs/copilot/: README.md
notebooks/: README.md
notebooks/example/: README.md
